<resources>
    <string name="app_name">QuickDeals 2.0</string>
    <string name="buttonText">Display Next Course</string>
    <string name="heading">MVP Architecture Pattern</string>
    <string name="subHeading">GeeksforGeeks Computer Science Online Courses</string>
    <string name="description">Course Description</string>
    <string name="date_tv_text">Select date</string>
    <string name="note_et_text">Add note</string>
    <string name="sector_tasks">%d Tasks"</string>
    <string name="category_tv_text">Various</string>
    <string name="first_sector_info_title">Late</string>
    <string name="new_task_fragment_tb_title">New Task</string>
    <string name="second_sector_info_title">Today</string>
    <string name="third_sector_info_title">Done</string>
    <string name="task_count_text">%1$d Tasks</string>
    <string name="new_task_date_shablon">%d, %s %02d, %02d:%02d</string>
    <string name="late_date_shablon">%02d:%02d · %s %02d</string>
    <string name="today_date_shablon">%02d:%02d</string>
    <string name="done_date_shablon">%d, %s %02d, %02d:%02d</string>
    <string name="date_shablon">%02d:%02d · %s %02%d</string>
    <string name="lists_title">Lists</string>
    <string name="new_task_et_title_text">Type it here…</string>
    <string name="deleting_sector_title">Warning!</string>
    <string name="deleting_sector_desc">Do you really want to delete this sector?</string>
    <string name="notification_title">Whoop-whoop!</string>
    <string name="notification_desc">You have received a "%s" notification. Your note is: %s</string>
    <string name="first_menu_title">Alphabetical Sort</string>
    <string name="second_menu_title">Default Sort</string>
    <string name="third_menu_title">Task Count Sort</string>
    <string name="first_infomenu_title">Delete</string>
    <string name="empty_adapter_title">You\'r\e doing great!</string>
    <string name="empty_adapter_desc">You don\'t\have any overdue goals!</string>
</resources>