<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_websearch"
        android:icon="@drawable/menu_dr_bl"
        android:orderInCategory="3"
        android:title="Sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/alph_sort"
                android:icon="@drawable/alph_sort_dr"
                android:title="@string/first_menu_title" />
            <item
                android:id="@+id/def_sort"
                android:icon="@drawable/default_sort_dr"
                android:title="@string/second_menu_title" />
            <item
                android:id="@+id/task_count_sort"
                android:icon="@drawable/counting_dr"
                android:title="@string/third_menu_title" />
        </menu>
    </item>
</menu>