<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_rem_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/new_rem_menu">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="New Task"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll_v"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/mainLayout"
                android:layout_alignParentTop="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/act_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/category_tv_text"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/mainColor"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/act_im"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/act_im_size"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/file_def_dr" />

                <TextView
                    android:id="@+id/task_et_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ops_reg"
                    android:layout_marginStart="15dp"
                    android:background="@color/white"
                    android:paddingBottom="5dp"
                    android:text="What are you planning?" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <EditText
                        android:id="@+id/task_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:fontFamily="@font/ops_bold"
                        android:inputType="textPersonName"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        tools:ignore="SpeakableTextPresentCheck">

                        <requestFocus />
                    </EditText>
                </FrameLayout>

                <TableLayout
                    android:id="@+id/tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp">

                    <TableRow
                        android:id="@+id/o"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/date_img"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="8dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/calendar" />

                        <TextView
                            android:id="@+id/date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/ops_reg"
                            android:text="@string/date_tv_text"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/t"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/note_img"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="8dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/writing" />

                        <EditText
                            android:id="@+id/note_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="15dp"
                            android:background="#00FFFFFF"
                            android:fontFamily="@font/ops_reg"
                            android:text="@string/note_et_text"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/f"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/category_img"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="8dp"
                            android:layout_gravity="center_vertical"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/file_def" />

                        <TextView
                            android:id="@+id/category_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/ops_reg"
                            android:text="@string/category_tv_text"
                            android:textSize="16sp" />
                    </TableRow>

                </TableLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/footerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mainLayout"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <Button
                            android:id="@+id/createRemButton"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:textSize="18sp"
                            android:textAllCaps="false"
                            android:fontFamily="@font/ops_reg"
                            android:layout_alignParentBottom="true"
                            android:layout_centerVertical="false"
                            android:text="Create" />

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>


